Edited wiki page through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,11 +1,7 @@
 #summary Entities in the Stardust Spacetime.
 #labels Phase-Design
 
-= Introduction =
-
-Types of entities in the Spacetime are listed here.
-
-= Entities =
+== Entities ==
 
 Server entities:
   * Star systems
